--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ DB_USER='faithremo'
 DB_PASSWORD='abcd'
 DB_HOST='127.0.0.1'
 MODE='prod'
-ALLOWED_HOSTS='.localhost','heroku.com', '127.0.0.1'
+ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 DISABLED_COLLECTSTATIC=1
 
