--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ cloudinary==1.29.0
 dj-database-url==0.5.0
 Django==4.0.3
 django-bootstrap4==22.1
-django-heroku==0.3.1
+django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.0.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-decouple==3.6
 six==1.16.0
 soupsieve==2.3.1
