--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='django-insecure-+47tnx@o@&m8aj^vta^3qzptxoyhi-_f(8adk*-xri@gzdpvad'
 DEBUG=False
-DB_NAME='mygallery'
+DB_NAME='gallery'
 DB_USER='faithremo'
 DB_PASSWORD='abcd'
 DB_HOST='127.0.0.1'
